nginx-unprivileged.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-unprivileged
  name: nginx-unprivileged
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-unprivileged
  template:
    metadata:
      labels:
        app: nginx-unprivileged
    spec:

      volumes:
      - name: shared-unprivileged
        emptyDir: {}        
      - name: nginx-root
        emptyDir: {}
      - name: etc-nginx
        emptyDir: {}

      containers:
      - name: nginx-unprivileged
        image: pinpindock/nginx-unprivileged # https://hub.docker.com/r/pinpindock/nginx-unprivileged      
        ports:
        - containerPort: ${NGINX_PORT}
        volumeMounts:
        - name: shared-unprivileged
          mountPath: /tmp/nginx
        - name: nginx-root
          mountPath: /usr/share/nginx/html
        - name: etc-nginx
          mountPath: /etc/nginx/
